force-app/main/default/objects/Dynamic_Trigger__mdt/Dynamic_Trigger__mdt.object-meta.xml
<CustomObject>
    <description>Specify dynamic trigger classes</description>
    <label>Dynamic Trigger</label>
    <pluralLabel>Dynamic Triggers</pluralLabel>
</CustomObject>