force-app/main/default/objects/Dynamic_Trigger__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Class name for the trigger</description>
    <label>Class Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>