force-app/main/default/objects/Dynamic_Trigger__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Object type for the trigger</description>
    <label>Object Type</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>