force-app/main/default/objects/Dynamic_Trigger__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Priority order where lower number is the highest priority</description>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>